# claude-tracker

./: .gitignore  README.md  build.spec  installer.iss  pyproject.toml
.github/workflows/: release.yml
src/claude_tracker/: __init__.py  __main__.py  api.py  config.py  main.py  startup.py  tray.py  widget.py
